Add summary endpoint + pref parent endpoint  - update swagger.yml
